# HybGe-Flow3D-1.0.0

./: CMakeLists.txt  README.md  compile.bash  hgf.cpp  hgf.hpp  hgf.i  hgfArrays.cpp  hgfArrays.hpp  hgfAuxTools.hpp  hgfBC.cpp  hgfBC.hpp  hgfBC_v1bak.cpp  hgfBCv2.cpp  hgfBCv2.hpp  hgfIB.cpp  hgfIB.hpp  hgfMesh.cpp  hgfMesh.hpp  hgfMeshCu.cu  hgfMeshCu.hpp  hgfOPCA.cpp  hgfOPCA.hpp  hgfPP.cpp  hgfPP.hpp  hgfPoreNetwork.cpp  hgfPoreNetwork.hpp  hgfSetup.py  hgfStokes.cpp  hgfStokes.hpp  hgf_usermanual.tex  runtest.cpp  stokesManyGrids.py  stokesSubDivide.py  stokesolve.py  test.bash  throatKs.py
AMGX/: test.bash
CUDA_OMP/: CMakeLists.txt  hgf.cpp  hgf.hpp  hgf.i  hgfArrays.cpp  hgfArrays.hpp  hgfBC.cpp  hgfIB.cpp  hgfMeshCu.cu  hgfMeshCu.hpp  hgfPP.cpp  hgfPP.hpp  hgfPoreNetwork.cpp  hgfPoreNetwork.hpp  hgfStokes.cpp  hgfStokes.hpp  stokesManyGrids.py  stokesolve.py  test.bash
MAGMA/: CMakeLists.txt  test.bash
MAGMA/cmake/: FindMAGMA.cmake
OMP/: CMakeLists.txt  Makefile  driver.cpp  hgf.cpp  hgf.i  hgfArrays.cpp  hgfBC.cpp  hgfIB.cpp  hgfPP.cpp  hgfPoreNetwork.cpp  hgfSetup.py  hgfStokes.hpp  stokesolve.py
PARALUTION/: CMakeLists.txt  test.bash
PARALUTION/cmake/: FindPARALUTION.cmake
cmake/: FindMKL.cmake  FindNumPy.cmake  FindPARALUTION.cmake
depsrc/solve/MKL/: solve_mkl.cpp  solve_mkl.hpp
depsrc/solve/paralution/: solve_paralution.cpp  solve_paralution.hpp
documentation/html/: annotated.html  annotated_dup.js  classes.html  classhgf_1_1mesh_1_1voxel-members.html  classhgf_1_1mesh_1_1voxel.html  classhgf_1_1mesh_1_1voxel.js  classhgf_1_1models_1_1stokes-members.html  classhgf_1_1models_1_1stokes.html  classhgf_1_1models_1_1stokes.js  classhgf_1_1models_1_1uniform__porenetwork-members.html  classhgf_1_1models_1_1uniform__porenetwork.html  classhgf_1_1models_1_1uniform__porenetwork.js  dir_0619a8f54b4fad7043a6de45be8fde0b.html  dir_08d6cd1c1b635c58e6a2b0d281bf2cad.html  dir_103fc15b20f552cd8c0016df587305f5.html  dir_1780fe865d9ef6a5dc1249cc88d04abb.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7be0d8c199b9408ae01f5d77515b8def.html  dir_93287aa57a2806f5f547b73a619823dd.html  dir_a0c8e78eab9a26b124b9964574b86472.html  dir_bdeba5f06b852fec80257c0bf4c3c36e.html  dir_c92c4e76f9fdf606f30605fe2e381bd0.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  index.html  menudata.js  mesh_8hpp_source.html  model__porenetwork_8hpp_source.html  model__stokes_8hpp_source.html  multiscale__flow_8hpp_source.html  namespacehgf.html  namespacehgf.js  namespacehgf_1_1mesh.html  namespacehgf_1_1mesh.js  namespacehgf_1_1models.html  namespacehgf_1_1models.js  (+14 more)
documentation/html/search/: all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js
images/: ellipse2dP.eps  ellipse2dU.eps  pflow2dP.eps  pflow2dU.eps
include/: hgflow.hpp  mesh.hpp  model_porenetwork.hpp  model_stokes.hpp  models.hpp  multiscale.hpp  multiscale_flow.hpp  solve.hpp  solve_paralution.hpp  types.hpp  utilities.hpp
src/: driver.cpp  driverM.cpp  hgf.cpp  hgf.hpp  hgfArrays.cpp  hgfArrays.hpp  hgfAuxTools.hpp  hgfBC.cpp  hgfIB.cpp  hgfIB.hpp  hgfM.cpp  hgfM.hpp  hgfMesh.cpp  hgfMesh.hpp  hgfMeshCu.cu  hgfMeshCu.cuh  hgfMeshCu.hpp  hgfPP.cpp  hgfPP.hpp  hgfPPM.cpp  hgfPoreNetwork.cpp  hgfPoreNetwork.hpp  hgfPoreNetworkA.cpp  hgfPoreNetworkM.cpp  hgfPoreNetworkM.hpp  hgfPoreNetworkP.cpp  hgfStokes.cpp  hgfStokes.hpp  hgfStokesA.cpp  hgfStokesA.hpp  hgfStokesM.cpp  hgfStokesM.hpp  hgfStokesP.cpp  hgfStokesP.hpp  hgfUtils.cpp  hgfUtils.hpp
src/mesh/: mesh.cpp  voxel.cpp
src/models/porenetwork/: model_porenetwork.cpp  model_porenetwork.hpp  model_porenetwork_array.cpp  model_porenetwork_bc.cpp  model_porenetwork_network.cpp  model_porenetwork_permeability.cpp  model_porenetwork_postprocess.cpp
src/models/stokes/: model_stokes.cpp  model_stokes.hpp  model_stokes_array_2d.cpp  model_stokes_array_3d.cpp  model_stokes_bc_2d.cpp  model_stokes_bc_3d.cpp  model_stokes_dof_2d.cpp  model_stokes_dof_3d.cpp  model_stokes_immersed_boundary.cpp  model_stokes_postprocess.cpp
src/multiscale/flow/: multiscale_flow.cpp  multiscale_flow.hpp
src/solve/paralution/: solve_paralution.cpp
src/utility/: utilities.cpp
utils/: domain_subdivide.py  setenv.sh  setenv_hgf.sh
