CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7 FATAL_ERROR)

PROJECT(hgf)

SET(HGF_BUILD_PYTHON_HOOKS ON CACHE BOOL "Build HGF Python Hooks using Swig.")
SET(HGF_BUILD_EXECUTABLE ON CACHE BOOL "Build HGF Driver Executable.")

SET(LIBRARY_SRCS hgf.cpp
                 hgfMesh.cpp
                 hgfStokes.cpp
                 hgfArrays.cpp
                 hgfBC.cpp
                 hgfIB.cpp
                 hgfPP.cpp)

SET(EXECUTABLE_SRCS driver.cpp)

SET(CMAKE_MODULE_PATH ${CMAKE_HOME_DIRECTORY}/cmake)

FIND_PACKAGE(PARALUTION REQUIRED)
INCLUDE_DIRECTORIES(${PARALUTION_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${PARALUTION_INCLUDE_DIR})

ADD_LIBRARY(libhgf ${LIBRARY_SRCS})

IF(HGF_BUILD_PYTHON_HOOKS)
  FIND_PACKAGE(SWIG REQUIRED)
  INCLUDE(${SWIG_USE_FILE})

  FIND_PACKAGE(PythonInterp REQUIRED)
  FIND_PACKAGE(PythonLibs REQUIRED)
  FIND_PACKAGE(NumPy REQUIRED)
  INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS} ${NUMPY_INCLUDE_DIRS})

  SET(CMAKE_SWIG_FLAGS "")
  SET_SOURCE_FILES_PROPERTIES(hgf.i PROPERTIES CPLUSPLUS ON)
  SET_SOURCE_FILES_PROPERTIES(hgf.i PROPERTIES SWIG_FLAGS "-includeall")
  SET_SOURCE_FILES_PROPERTIES(hgf.i PROPERTIES SWIG_FLAGS "-cpperraswarn")
  SWIG_ADD_MODULE(hgf python hgf.i ${SRCS})
  SWIG_LINK_LIBRARIES(hgf ${PARALUTION_LIBRARY} ${PYTHON_LIBRARIES} libhgf)
ENDIF()

IF(HGF_BUILD_EXECUTABLE)
  ADD_EXECUTABLE(hgf ${EXECUTABLE_SRCS})
  TARGET_LINK_LIBRARIES(hgf ${PARALUTION_LIBRARY} libhgf)
ENDIF()
