CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7 FATAL_ERROR)

PROJECT(libhgf)

SET(CMAKE_MODULE_PATH ${CMAKE_HOME_DIRECTORY}/cmake)

### FIND PACKAGES ###
## OpenMP ##
FIND_PACKAGE(OpenMP REQUIRED)

## BOOST ##
FIND_PACKAGE(Boost REQUIRED COMPONENTS filesystem system)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

### FLAGS AND HGF SOURCES SECTION ###
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -O2 -std=c++11")

file ( GLOB_RECURSE HEADERS
       "./include/*" )

file( GLOB_RECURSE SOURCES
	   "./src/*" )

SET(EXTERNAL_LIBS "${Boost_LIBRARIES}")

### LINEAR ALGEBRA PACKAGES ###
## PARALUTION, OPTIONAL ##
FIND_PACKAGE(PARALUTION REQUIRED)
INCLUDE_DIRECTORIES(${PARALUTION_INCLUDE_DIR})
LIST(APPEND EXTERNAL_LIBS "${PARALUTION_LIBRARY}")

FIND_PACKAGE(LAPACK REQUIRED)
LIST(APPEND EXTERNAL_LIBS ${LAPACK_LIBRARIES})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${LAPACK_LINKER_FLAGS}")

INCLUDE_DIRECTORIES("./include")

SET(LIBRARY_SRCS ${HEADERS} ${SOURCES})

ADD_LIBRARY(hgf STATIC ${LIBRARY_SRCS})

TARGET_LINK_LIBRARIES( hgf
                       ${EXTERNAL_LIBS} )

INSTALL(TARGETS hgf DESTINATION lib)
INSTALL(FILES ${HEADERS} DESTINATION include)

